feat(sourcecode): add setuptools build metadata (#5292)
Adds automatic instrumentation for setuptools for embedding git metadata of the Python package.

This is implemented by monkey-patching setuptools.setup to add source_code_url as an additional entry in the project_urls metadata field.


Co-authored-by: Tahir H. Butt <tahir.butt@datadoghq.com>
Co-authored-by: Ofek Lev <ofekmeister@gmail.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,12 @@ jobs:
           # We skip the test_http.py tests in riot and run the test_http.py tests through tox.
           pattern: '^py.\+-tracer_test_http'
 
+  sourcecode:
+    <<: *contrib_job
+    steps:
+      - run_test:
+          pattern: "sourcecode"
+
   telemetry:
     <<: *machine_executor
     steps:
@@ -1208,6 +1214,7 @@ requires_tests: &requires_tests
     - sanic
     - snowflake
     - sqlalchemy
+    - sourcecode 
     - starlette
     - stdlib
     - test_logging
@@ -1313,6 +1320,7 @@ workflows:
       - starlette: *requires_base_venvs
       - stdlib: *requires_base_venvs
       - sqlalchemy: *requires_base_venvs
+      - sourcecode: *requires_base_venvs
       - test_logging: *requires_base_venvs
       - tornado: *requires_base_venvs
       - tracer: *requires_base_venvs
