--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ exclude = '''
   | ddtrace/profiling/collector/_traceback.pyx$
   | ddtrace/profiling/collector/_task.pyx$
   | ddtrace/profiling/_threading.pyx$
+  | ddtrace/profiling/collector/ddup.pyx$
   | ddtrace/profiling/collector/stack.pyx$
   | ddtrace/profiling/exporter/pprof_.*pb2.py$
   | ddtrace/profiling/exporter/pprof.pyx$
