fix(lib-injection): include package in image
Formerly, the Kubernetes lib injection mechanism worked by including a
sitecustomize.py file on the path which would execute a `pip install
ddtrace==...`. This approach has a few downsides:

- Internet access required
- Application overhead at startup
- python/pip on the path doesn't have permission to install

Instead, the ddtrace package and its dependencies can be baked into the
library injection image. The sitecustomize.py file now updates the
PYTHONPATH to include the directory containing the ddtrace package and
its dependencies.

This works as Python is able to identify which binaries to use at
runtime so all of the binaries can be included in the injection image.

--- a/.github/workflows/lib-injection.yml
+++ b/.github/workflows/lib-injection.yml
@@ -5,14 +5,12 @@ on:
 
 jobs:
   build-and-publish-test-image:
-    uses: ./.github/workflows/build-and-publish-image.yml
-    with:
-      tags: 'ghcr.io/datadog/dd-trace-py/dd-lib-python-init:${{ github.sha }}'
-      platforms: 'linux/amd64,linux/arm64/v8'
-      build-args: 'DDTRACE_PYTHON_VERSION=git+https://github.com/Datadog/dd-trace-py@${{ github.sha }}'
-      context: ./lib-injection
+    uses: ./.github/workflows/lib-inject-publish.yml
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      ddtrace-version: v1.10
+      image-tag: ${{ github.sha }}
 
   test:
     needs:
@@ -67,8 +65,23 @@ jobs:
             --network=test-inject \
             -p 8126:8126 \
             ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.7.2
-      - name: Apply a fixed, stable version of the library
-        run: sed -i "s~<DD_TRACE_VERSION_TO_BE_REPLACED>~git+https://github.com/Datadog/dd-trace-py@${{ github.sha }}~g" lib-injection/sitecustomize.py
+      - name: Prepare the volume
+        run: |
+          cd lib-injection
+          mkdir -p lib-injection/ddtrace_pkgs
+          cp sitecustomize.py lib-injection/
+          ./dl_wheels.py \
+            --ddtrace-version=v1.10 \
+            --python-version=3.11 \
+            --python-version=3.10 \
+            --python-version=3.9 \
+            --python-version=3.8 \
+            --python-version=3.7 \
+            --ddtrace-version=v1.10 \
+            --arch x86_64 \
+            --platform manylinux2014 \
+            --output-dir ddtrace_pkgs \
+            --verbose
       - name: Build test app
         run: |
           docker build \
@@ -83,8 +96,7 @@ jobs:
             -e PYTHONPATH=/lib-injection \
             -v $PWD/lib-injection:/lib-injection \
             ${{matrix.variant}}
-          # Package has to be built from source, wait a while
-          sleep 85
+          sleep 5
           docker logs ${{matrix.variant}}
       - name: Test the app
         run: |
