--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -214,13 +214,10 @@ jobs:
 
   build-and-publish-init-image:
     needs: [upload_pypi]
-    # We have to wait for the PyPI job since the image that we publish depends on installing
-    # the package from PyPI.
-    uses: ./.github/workflows/build-and-publish-image.yml
-    with:
-      tags: ghcr.io/datadog/dd-trace-py/dd-lib-python-init:${{ github.ref_name }}
-      platforms: 'linux/amd64,linux/arm64/v8'
-      build-args: "DDTRACE_PYTHON_VERSION=${{ github.ref_name }}"
-      context: ./lib-injection
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: ./.github/workflows/lib-inject-publish.yml
+        with:
+          ddtrace-version: ${{ github.ref_name }}
+          image-tag: ${{ github.ref_name }}
+        secrets:
+          token: ${{ secrets.GITHUB_TOKEN }}
