feat(kafka): add confluent_kafka integration (#5303)
This PR adds automatic instrumentation for
[confluent_kafka](https://github.com/confluentinc/confluent-kafka-python),
which is the Python client for Apache Kafka v0.8 and above.

Currently, this integration provides a wrapper for the
`confluent_kafka.Producer` and `confluent_kafka.Consumer` classes,
specifically providing tracing for `confluent_kafka.Producer.produce()`
and `confluent_kafka.Consumer.poll()`.

This integration supports `confluent_kafka>=1.7.0`.

Notes: 
- consumer group_id as well as consumer/producer client_id are not
publicly available attributes in the `confluent_kafka` API. While the
`message_key, partition, and tombstone` attributes are set in our
instrumentation, the former two attributes are unavailable until the
`confluent_kafka` API changes to publicly include them in the future.
- When a traced producer creates a message with
`Producer.produce(topic)`, but no partition is explicitly set, the
resulting span will have a default partition of `-1` to signify that the
partition will be set by the built-in partitioner. `Consumer poll()`
spans with messages will have the correct partition set as the tag as
that information is available directly from the message.
- The traced `Consumer.poll()` span will have a boolean tag
`kafka.received_message` to indicate if the `poll()` method resulted in
a received message or not. If a message was received, then the span will
include message-specific tags including `topic,partition,tombstone`.
- The traced `Consumer.poll()` (if a message was received) and
`Producer.produce()` spans will include a boolean `tombstone` tag to
indicate whether or not the message was a tombstone (empty/null message
value).


## Checklist

- [x] Change(s) are motivated and described in the PR description.
- [x] Testing strategy is described if automated tests are not included
in the PR.
- [x] Risk is outlined (performance impact, potential for

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1084,6 +1084,15 @@ jobs:
           pattern: "wsgi"
           snapshot: true
 
+  kafka:
+    <<: *machine_executor
+    parallelism: 2
+    steps:
+      - run_test:
+          pattern: 'kafka'
+          snapshot: true
+          docker_services: 'kafka'
+
   kombu:
     <<: *contrib_job_small
     docker:
@@ -1184,6 +1193,7 @@ requires_tests: &requires_tests
     - vendor
     - profile
     - jinja2
+    - kafka
     - kombu
     - mako
     - mariadb
@@ -1288,6 +1298,7 @@ workflows:
       - vendor: *requires_base_venvs
       - profile: *requires_base_venvs
       - jinja2: *requires_base_venvs
+      - kafka: *requires_base_venvs
       - kombu: *requires_base_venvs
       - mako: *requires_base_venvs
       - mariadb: *requires_base_venvs
