feat(ci-visibility): refactor CI Visibility into its own namespace (#5446)
### Summary
This PR involves:
- Introducing a new `ddtrace.internal.ci_visibility` module to house CI
Visibility-specific code, and a new `CIVisibility` service to
encapsulate CI Visibility information and logic
- Makes the `TraceCiVisibilityFilter` a private filter (and deprecate
the public `TraceCiVisibilityFilter` for now until we remove it in
2.0.0) and handle the span processing for test spans (adding CI
Visibility-specific tags, `dd_origin`, etc)
- Removes usage of `Pin` objects in the `pytest` and `pytest-bdd`
integrations as the `CIVisibility` service keeps its own references to a
`tracer` object and `config` dictionary.

### Details

This PR builds on top of #3726 by introducing the
`ddtrace.internal.ci_visibility` module, which now contains extracted
code enabling and disabling CI Visibility in
`ddtrace.contrib.pytest.plugin.py` and
`ddtrace.contrib.pytest_bdd.plugin.py`.

This PR also refactors the extracted code into a new `CIVisibility`
service, which handles all CI Visibility-specific logic and can be
enabled and disabled in the `pytest` and `pytest-bdd`
plugins/integrations. The `CIVisibility` service does this by keeping a
reference to a tracer and configures a `TraceCiVisibilityFilter` filter
into the tracer's trace filters, which handles the span processing for
CI Visibility.

Additionally, as the `CIVisibility` service is no longer tied to a
specific integration, the usage of `Pin` objects in the `pytest` and
`pytest-bdd` integrations were removed as well as from the
`CIVisibility` service, which keeps its own reference to a `tracer` and
`config` dictionary. The `Pin` class is traditionally used for
integrations, but since CIVisibility is meant to be run only for a test
suite in CI, the corresponding tracer will only be configured for that
specific test suite and shutdown once the test suite is finished.

*Note*: the introduced `CIVisib

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,12 @@ jobs:
           # We skip the test_http.py tests in riot and run the test_http.py tests through tox.
           pattern: '^py.\+-tracer_test_http'
 
+  ci_visibility:
+    <<: *contrib_job_small
+    steps:
+      - run_test:
+          pattern: "ci_visibility"
+
   sourcecode:
     <<: *contrib_job
     steps:
@@ -1170,6 +1176,7 @@ requires_tests: &requires_tests
     - cassandra
     - celery
     - cherrypy
+    - ci_visibility
     - consul
     - ddtracerun
     - dogpile_cache
@@ -1275,6 +1282,7 @@ workflows:
       - cassandra: *requires_base_venvs
       - celery: *requires_base_venvs
       - cherrypy: *requires_base_venvs
+      - ci_visibility: *requires_base_venvs
       - consul: *requires_base_venvs
       - ddtracerun: *requires_base_venvs
       - django: *requires_base_venvs
