chore(lib-inject): fix build_deploy
Re-usable workflows don't support being run in steps which isn't well documented. This manifests as

The workflow is not valid. .github/workflows/build_deploy.yml (Line: 222, Col: 9): Unexpected value 'secrets' .github/workflows/build_deploy.yml
https://github.com/DataDog/dd-trace-py/actions/runs/4612728372

Unfortunately, there isn't a really good way to verify this job before the release. Github doesn't validate the workflows until they have match criteria and are executed.

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -214,10 +214,10 @@ jobs:
 
   build-and-publish-init-image:
     needs: [upload_pypi]
-    steps:
-      - uses: ./.github/workflows/lib-inject-publish.yml
-        with:
-          ddtrace-version: ${{ github.ref_name }}
-          image-tag: ${{ github.ref_name }}
-        secrets:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
+    uses: ./.github/workflows/lib-inject-publish.yml
+    secrets:
+      token: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      ddtrace-version: ${{ github.ref_name }}
+      image-tag: ${{ github.ref_name }}
