fix pr-name build issue

--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   pr_name_lint:
+    if: ${{ ! github.event.merge_group }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
