Add tests and docs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,6 +401,13 @@ jobs:
       - run_test:
           pattern: "debugger"
 
+  openai:
+    <<: *machine_executor
+    steps:
+      - run_test:
+          pattern: 'openai'
+          snapshot: true
+
   opentracer:
     <<: *contrib_job
     steps:
@@ -1177,6 +1184,7 @@ requires_tests: &requires_tests
     - mongoengine
     - mysqlconnector
     - mysqlpython
+    - openai
     - opentracer
     - opentelemetry
     - psycopg
@@ -1279,6 +1287,7 @@ workflows:
       - mongoengine: *requires_base_venvs
       - mysqlconnector: *requires_base_venvs
       - mysqlpython: *requires_base_venvs
+      - openai: *requires_base_venvs
       - opentracer: *requires_base_venvs
       - opentelemetry: *requires_base_venvs
       - psycopg: *requires_base_venvs
