--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,8 +109,10 @@ services:
             - DD_REMOTE_CONFIGURATION_KEY=${DD_REMOTE_CONFIGURATION_KEY-invalid_but_this_is_fine}
             - DD_REMOTE_CONFIGURATION_REFRESH_INTERVAL=5s
             - DD_APM_RECEIVER_SOCKET=/tmp/ddagent/trace.sock
+            - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
         ports:
-            - "127.0.0.1:8126:8126"
+            - 8126:8126
+            - 8125:8125/udp
         volumes:
           - ddagent:/tmp/ddagent:rw
     testagent:
