--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,26 +162,16 @@ commands:
             - start_docker_services:
                 env: SNAPSHOT_CI=1
                 services: testagent << parameters.docker_services >>
-            - when:
-                condition:
-                  << pipeline.parameters.coverage >>
-                steps:
-                  - run:
-                      environment:
-                        DD_TRACE_AGENT_URL: http://localhost:9126
-                      command: |
-                          mv .riot .ddriot
-                          riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 ./scripts/ddtest riot -v run --exitfirst --pass-env -s
-            - unless:
-                condition:
-                  << pipeline.parameters.coverage >>
-                steps:
-                  - run:
-                      environment:
-                        DD_TRACE_AGENT_URL: http://localhost:9126
-                      command: |
-                        mv .riot .ddriot
-                        riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 -I {} ./scripts/ddtest riot -v run --exitfirst --pass-env -s {} --no-cov
+            - run:
+                environment:
+                  DD_TRACE_AGENT_URL: http://localhost:9126
+                command: |
+                  mv .riot .ddriot
+                  if [ << pipeline.parameters.coverage >> ]; then
+                    riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 ./scripts/ddtest riot -v run --exitfirst --pass-env -s
+                  else
+                    riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 -I {} ./scripts/ddtest riot -v run --exitfirst --pass-env -s {} --no-cov
+                  fi
       - unless:
           condition:
               << parameters.snapshot >>
@@ -194,19 +184,13 @@ commands:
                   - run:
                       name: "Waiting for << parameters.wait >>"
                       command: riot -v run 'wait' << parameters.wait >>
-
-            - when:
-                condition:
-                  << pipeline.parameters.coverage >>
-                steps:
-                  - run:
-                      command: "riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 riot -v run --exitfirst --pass-env -s"
-            - unless:
-                condition:
-                  << pipeline.parameters.coverage >>
-                steps:
-                  - run:
-                      command: "riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 -I {} riot -v run --exitfirst --pass-env {} -s --no-cov"
+            - run:
+                command: |
+                  if [ << pipeline.parameters.coverage >> ]; then
+                    riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 riot -v run --exitfirst --pass-env -s
+                  else
+                    riot list --hash-only '<<parameters.pattern>>' | shuf | circleci tests split | xargs -n 1 -I {} riot -v run --exitfirst --pass-env {} -s --no-cov
+                  fi
       - save_pip_cache
       - when:
           condition:
@@ -360,7 +344,7 @@ jobs:
           condition:
             << pipeline.parameters.coverage >>
           steps:
-            - run: echo "No coverage on non-1.x branches"
+            - run: echo "No coverage data collected. Set run workflow manually with pipeline parameter 'coverage=true'."
 
 
   build_base_venvs:
