--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -538,16 +538,16 @@ jobs:
 
   integration_agent:
     <<: *machine_executor
+    parallelism: 2
     steps:
       - attach_workspace:
           at: .
       - checkout
       - start_docker_services:
           services: ddagent
-      - run:
-          command: |
-            mv .riot .ddriot
-            ./scripts/ddtest riot -v run --pass-env -s 'integration-latest'
+      - run_test:
+          store_coverage: false
+          pattern: 'integration-latest'
 
   integration_testagent:
     <<: *machine_executor
@@ -555,15 +555,10 @@ jobs:
       - attach_workspace:
           at: .
       - checkout
-      - start_docker_services:
-          env: SNAPSHOT_CI=1
-          services: testagent
-      - run:
-          environment:
-            DD_TRACE_AGENT_URL: http://localhost:9126
-          command: |
-            mv .riot .ddriot
-            ./scripts/ddtest riot -v run --pass-env -s 'integration-snapshot'
+      - run_test:
+          store_coverage: false
+          snapshot: true
+          pattern: 'integration-snapshot'
 
   vendor:
     <<: *contrib_job_small
