--- a/benchmarks/span/config.yaml
+++ b/benchmarks/span/config.yaml
@@ -4,6 +4,10 @@ start: &base
   ltags: 0
   nmetrics: 0
   finishspan: false
+  traceid128: false
+start-traceid128:
+  <<: *base
+  traceid128: true
 add-tags:
   <<: *base
   ntags: 100
@@ -14,3 +18,7 @@ add-metrics:
 start-finish:
   <<: *base
   finishspan: true
+start-finish-traceid128:
+  <<: *base
+  finishspan: true
+  traceid128: true
