--- a/tests/contrib/openai/cassettes/chat_completion_async.yaml
+++ b/tests/contrib/openai/cassettes/chat_completion_async.yaml
@@ -9,21 +9,19 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - OpenAI/v1 PythonBindings/0.27.4
+      - OpenAI/v1 PythonBindings/0.27.2
       X-OpenAI-Client-User-Agent:
-      - '{"bindings_version": "0.27.4", "httplib": "requests", "lang": "python", "lang_version":
-        "3.9.11", "platform": "macOS-13.3.1-arm64-arm-64bit", "publisher": "openai",
-        "uname": "Darwin 22.4.0 Darwin Kernel Version 22.4.0: Mon Mar  6 20:59:28
-        PST 2023; root:xnu-8796.101.5~3/RELEASE_ARM64_T6000 arm64"}'
+      - '{"bindings_version": "0.27.2", "httplib": "requests", "lang": "python", "lang_version":
+        "3.8.13", "platform": "macOS-13.2-arm64-arm-64bit", "publisher": "openai",
+        "uname": "Darwin 22.3.0 Darwin Kernel Version 22.3.0: Thu Jan  5 20:48:54
+        PST 2023; root:xnu-8792.81.2~2/RELEASE_ARM64_T6000 arm64 arm"}'
     method: post
     uri: https://api.openai.com/v1/chat/completions
   response:
     body:
-      string: '{"id":"chatcmpl-74zdG9R7K378TExrWFrgmBTWW7jYY","object":"chat.completion","created":1681424582,"model":"gpt-3.5-turbo-0301","usage":{"prompt_tokens":57,"completion_tokens":45,"total_tokens":102},"choices":[{"message":{"role":"assistant","content":"The
-        2020 World Series was played at Globe Life Field in Arlington, Texas, United
-        States."},"finish_reason":"stop","index":0},{"message":{"role":"assistant","content":"The
-        2020 World Series was played in Arlington, Texas at Globe Life Field, the
-        home stadium of the Texas Rangers."},"finish_reason":"stop","index":1}]}
+      string: '{"id":"chatcmpl-75EoRlPL5WXPmyzzgDgdI9OJW3vXA","object":"chat.completion","created":1681482935,"model":"gpt-3.5-turbo-0301","usage":{"prompt_tokens":57,"completion_tokens":34,"total_tokens":91},"choices":[{"message":{"role":"assistant","content":"The
+        2020 World Series was played at Globe Life Field in Arlington, Texas."},"finish_reason":"stop","index":0},{"message":{"role":"assistant","content":"The
+        2020 World Series was played in Globe Life Field in Arlington, Texas."},"finish_reason":"stop","index":1}]}
 
         '
     headers:
@@ -32,7 +30,7 @@ interactions:
       CF-Cache-Status:
       - DYNAMIC
       CF-RAY:
-      - 7b771c7368a83b87-BOS
+      - 7b7cad1b18920c96-EWR
       Cache-Control:
       - no-cache, must-revalidate
       Connection:
@@ -42,7 +40,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 13 Apr 2023 22:23:03 GMT
+      - Fri, 14 Apr 2023 14:35:36 GMT
       Server:
       - cloudflare
       Transfer-Encoding:
@@ -52,21 +50,21 @@ interactions:
       openai-model:
       - gpt-3.5-turbo-0301
       openai-organization:
-      - user-f23xvdxbrssd56y1ghcjdcue
+      - datadog-4
       openai-processing-ms:
-      - '2065'
+      - '1350'
       openai-version:
       - '2020-10-01'
       strict-transport-security:
       - max-age=15724800; includeSubDomains
       x-ratelimit-limit-requests:
-      - '3'
+      - '3500'
       x-ratelimit-remaining-requests:
-      - '1'
+      - '3499'
       x-ratelimit-reset-requests:
-      - 37.872s
+      - 17ms
       x-request-id:
-      - 6fcdbe28922d3af089f0c9a265ac1648
+      - 248ed3f2529c557dc176d522b96714a1
     status:
       code: 200
       message: OK
