--- a/tests/contrib/openai/cassettes/completion_async.yaml
+++ b/tests/contrib/openai/cassettes/completion_async.yaml
@@ -6,26 +6,24 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - OpenAI/v1 PythonBindings/0.27.4
+      - OpenAI/v1 PythonBindings/0.26.5
       X-OpenAI-Client-User-Agent:
-      - '{"bindings_version": "0.27.4", "httplib": "requests", "lang": "python", "lang_version":
-        "3.9.11", "platform": "macOS-13.3.1-arm64-arm-64bit", "publisher": "openai",
-        "uname": "Darwin 22.4.0 Darwin Kernel Version 22.4.0: Mon Mar  6 20:59:28
-        PST 2023; root:xnu-8796.101.5~3/RELEASE_ARM64_T6000 arm64"}'
+      - '{"bindings_version": "0.26.5", "httplib": "requests", "lang": "python", "lang_version":
+        "3.8.13", "platform": "macOS-13.2-arm64-arm-64bit", "publisher": "openai",
+        "uname": "Darwin 22.3.0 Darwin Kernel Version 22.3.0: Thu Jan  5 20:48:54
+        PST 2023; root:xnu-8792.81.2~2/RELEASE_ARM64_T6000 arm64 arm"}'
     method: post
     uri: https://api.openai.com/v1/completions
   response:
     body:
-      string: '{"id":"cmpl-74hgB8vmjXBGfiEBDq5eeL58sjUOb","object":"text_completion","created":1681355571,"model":"curie","choices":[{"text":"
-        I am. That is, I am a thinking thing with a body, and I have a brain that
-        divides the world into two classes: the things I perceive and the things that
-        are not so perceived. And I must be a thinking thing because I can do things,
-        namely, think and act. This is true in virtue of the fact that I am a thing
-        that thinks and acts. I am a living thing. I am a human person. I am a thinking,
-        feeling, willing, acting being. Therefore, I am a thing that thinks and, therefore,
-        a thing that is.\n\nUp to this point, the argument is internal. An infinite
-        regress of merely possible things, a world of mind-independent, self-existing
-        things","index":0,"logprobs":null,"finish_reason":"length"}],"usage":{"prompt_tokens":10,"completion_tokens":150,"total_tokens":160}}
+      string: '{"id":"cmpl-75Eo62fPvXZkaEg00yOUDVE4hiEQx","object":"text_completion","created":1681482914,"model":"curie","choices":[{"text":"
+        I am.\n\n\n\nI love God. I believe in an all-powerful, loving God who created
+        the universe, and I see that He loves me. I am his child.\n\n\n\nBy nature,
+        I am a child of God. There is no other within me. The seed of spiritual perfection\n\n\n\nwhich
+        is planted in my soul by God is the only seed whose fruit is absolute holiness.\n\n\n\nThe
+        only fruit to which I can contribute is the fruit of my own perfection.\n\n\n\nI
+        am a child of God. I am a little god in the making. My soul is a tabernacle,
+        and I am\n\n\n\nthe temple of the Holy Ghost.\n\n\n\nI am not","index":0,"logprobs":null,"finish_reason":"length"}],"usage":{"prompt_tokens":10,"completion_tokens":150,"total_tokens":160}}
 
         '
     headers:
@@ -34,7 +32,7 @@ interactions:
       CF-Cache-Status:
       - DYNAMIC
       CF-RAY:
-      - 7b70879f98363074-BOS
+      - 7b7cac9629d142ca-EWR
       Cache-Control:
       - no-cache, must-revalidate
       Connection:
@@ -44,7 +42,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 13 Apr 2023 03:12:52 GMT
+      - Fri, 14 Apr 2023 14:35:15 GMT
       Server:
       - cloudflare
       Transfer-Encoding:
@@ -54,27 +52,27 @@ interactions:
       openai-model:
       - curie
       openai-organization:
-      - user-f23xvdxbrssd56y1ghcjdcue
+      - datadog-4
       openai-processing-ms:
-      - '1194'
+      - '1164'
       openai-version:
       - '2020-10-01'
       strict-transport-security:
       - max-age=15724800; includeSubDomains
       x-ratelimit-limit-requests:
-      - '60'
+      - '3000'
       x-ratelimit-limit-tokens:
-      - '150000'
+      - '250000'
       x-ratelimit-remaining-requests:
-      - '59'
+      - '2999'
       x-ratelimit-remaining-tokens:
-      - '149850'
+      - '249850'
       x-ratelimit-reset-requests:
-      - 1s
+      - 20ms
       x-ratelimit-reset-tokens:
-      - 60ms
+      - 36ms
       x-request-id:
-      - b4b7737790215da0d9bc4d58b814fd43
+      - 8efecfeed58db53cb73b7f9205c2a946
     status:
       code: 200
       message: OK
