feat: add more scenarios to benchmark tests

--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -65,3 +65,13 @@ benchmark-set-http-meta:
   extends: .benchmarks
   variables:
     SCENARIO: "set_http_meta"
+
+benchmark-flask-simple:
+  extends: .benchmarks
+  variables:
+    SCENARIO: "flask_simple"
+
+benchmark-flask-sqli:
+  extends: .benchmarks
+  variables:
+    SCENARIO: "flask_sqli"
