--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,6 +275,9 @@ jobs:
           name: "Mypy check"
           command: riot run -s mypy
       - run:
+          name: "cython-lint check"
+          command: riot run -s cython-lint
+      - run:
           name: "Codespell check"
           command: riot run -s codespell
       - run:
