fix(benchmark): tracer error, add otel_span to scenarios list

--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -75,3 +75,8 @@ benchmark-flask-sqli:
   extends: .benchmarks
   variables:
     SCENARIO: "flask_sqli"
+
+benchmark-otel-span:
+  extends: .benchmarks
+  variables:
+    SCENARIO: "otel_span"
