--- a/.github/workflows/lib-injection.yml
+++ b/.github/workflows/lib-injection.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           docker run \
             -d \
+            --name=testagent \
             --network=test-inject \
             -p 8126:8126 \
             ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.7.2
@@ -70,14 +71,13 @@ jobs:
           cd lib-injection
           mkdir -p lib-injection/ddtrace_pkgs
           cp sitecustomize.py lib-injection/
-          ./dl_megawheel.py \
+          ./dl_wheels.py \
             --ddtrace-version=v1.10 \
             --python-version=3.11 \
             --python-version=3.10 \
             --python-version=3.9 \
             --python-version=3.8 \
             --python-version=3.7 \
-            --ddtrace-version=v1.10 \
             --arch x86_64 \
             --platform manylinux2014 \
             --output-dir ddtrace_pkgs \
@@ -94,15 +94,19 @@ jobs:
             --network test-inject \
             -p 18080:18080 \
             -e PYTHONPATH=/lib-injection \
+            -e DD_TRACE_AGENT_URL=http://testagent:8126 \
             -v $PWD/lib-injection:/lib-injection \
             ${{matrix.variant}}
           # Wait for the app to start
-          sleep 5
+          sleep 20
           docker logs ${{matrix.variant}}
       - name: Test the app
         run: |
           curl http://localhost:18080
           sleep 1  # wait for traces to be sent
-      - name: Check test agent
+      - name: Print traces
+        run: curl http://localhost:8126/test/traces
+      - name: Check test agent received a trace
         run: |
-          curl http://localhost:8126/test/traces
+          N=$(curl http://localhost:8126/test/traces | jq -r -e 'length')
+          [[ $N == "1" ]]
