--- a/tests/contrib/openai/cassettes/acompletion_2.yaml
+++ b/tests/contrib/openai/cassettes/acompletion_2.yaml
@@ -1,7 +1,6 @@
 interactions:
 - request:
-    body: '{"model": "curie", "prompt": "As Descartes said, I think, therefore", "temperature":
-      0.8, "n": 1, "max_tokens": 150}'
+    body: '{"model": "ada", "prompt": "hello world"}'
     headers:
       Content-Type:
       - application/json
@@ -16,26 +15,17 @@ interactions:
     uri: https://api.openai.com/v1/completions
   response:
     body:
-      string: "{\"id\":\"cmpl-76n1xq0xOyZWMQ8h6FQ89lgWjPz12\",\"object\":\"text_completion\"\
-        ,\"created\":1681852797,\"model\":\"curie\",\"choices\":[{\"text\":\" I am;\
-        \ and I am in a sense a non-human entity woven together from memories, desires\
-        \ and emotions. But, who is to say that I am not an artificial intelligence.\
-        \ The brain is a self-organising, self-aware, virtual reality computer \u2026\
-        \ so how is it, who exactly is it, this thing that thinks, feels, loves and\
-        \ believes? Are we not just software running on hardware?\\n\\nRecently, I\
-        \ have come to take a more holistic view of my identity, not as a series of\
-        \ fleeting moments, but as a long-term, ongoing process. The key question\
-        \ for me is not that of \u2018who am I?\u2019 but rather, \u2018how am I?\u2019\
-        \ \u2013 a question\",\"index\":0,\"logprobs\":null,\"finish_reason\":\"length\"\
-        }],\"usage\":{\"prompt_tokens\":10,\"completion_tokens\":150,\"total_tokens\"\
-        :160}}\n"
+      string: '{"id":"cmpl-76n21v67JBLBTiNAIzghImtsNjBrq","object":"text_completion","created":1681852801,"model":"ada","choices":[{"text":",\"
+        a male farrago, or \"voices of the people.\" If","index":0,"logprobs":null,"finish_reason":"length"}],"usage":{"prompt_tokens":2,"completion_tokens":16,"total_tokens":18}}
+
+        '
     headers:
       Access-Control-Allow-Origin:
       - '*'
       CF-Cache-Status:
       - DYNAMIC
       CF-RAY:
-      - 7b9ff2f19cbc4233-EWR
+      - 7b9ff30aeba14314-EWR
       Cache-Control:
       - no-cache, must-revalidate
       Connection:
@@ -45,22 +35,22 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 18 Apr 2023 21:19:59 GMT
+      - Tue, 18 Apr 2023 21:20:01 GMT
       Server:
       - cloudflare
       Set-Cookie:
-      - _cfuvid=LbsGQgt0EhyyM2BTkVBOkV1poQJcx8CC0yWaD81WRRw-1681852799013-0-604800000;
+      - _cfuvid=0oDMYOXJGh5YRpQ8hkuUFVoHHTBgJ979Srwpr06azBM-1681852801914-0-604800000;
         path=/; domain=.api.openai.com; HttpOnly; Secure; SameSite=None
       Transfer-Encoding:
       - chunked
       alt-svc:
       - h3=":443"; ma=86400, h3-29=":443"; ma=86400
       openai-model:
-      - curie
+      - ada
       openai-organization:
       - datadog-4
       openai-processing-ms:
-      - '1241'
+      - '106'
       openai-version:
       - '2020-10-01'
       strict-transport-security:
@@ -72,13 +62,13 @@ interactions:
       x-ratelimit-remaining-requests:
       - '2999'
       x-ratelimit-remaining-tokens:
-      - '249850'
+      - '249983'
       x-ratelimit-reset-requests:
       - 20ms
       x-ratelimit-reset-tokens:
-      - 36ms
+      - 3ms
       x-request-id:
-      - 50366a767f40ba73d4a84848e615e298
+      - d3a37102dcbfbc25b46148bdcd04bc5d
     status:
       code: 200
       message: OK
